<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/lightPrimaryColor"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/main_tv_contactApplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lightPrimaryColor"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/contact_application"
        android:textColor="@color/btn_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_tv_newContactuserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lightPrimaryColor"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/contact_application"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/main_iv_userMood"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/satisfied"
        android:contentDescription="@string/user_mood_will_appear_here"/>

    <ImageView
        android:id="@+id/main_iv_phone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:contentDescription="@string/contact_phone_number"
        app:srcCompat="@drawable/phone" />

    <ImageView
        android:id="@+id/main_iv_webPage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/web"
        android:contentDescription = "@string/contact_webpage"/>

    <ImageView
        android:id="@+id/main_iv_loction"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/location"
        android:contentDescription="@string/contact_location"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_createNewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:textAllCaps="false"
        android:textSize="15sp"

        android:background="@color/btn_color"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/create_new_contact"
        android:textColor="#FFFF" />
</LinearLayout>